...
                                                <connections>
                                                    <action selector="recordEnablePressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="l0F-Vu-Ec6"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O9V-pQ-Tlh">
                                                <rect key="frame" x="109.66666666666666" y="0.0" width="45" height="44"/>
                                                <accessibility key="accessibilityConfiguration" identifier="playButton" label="Play"/>
                                                <color key="tintColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                                <state key="normal" title="play" image="microjam-play"/>
                                                <connections>
                                                    <action selector="playButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dgp-Uu-Gtl"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="right" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PVn-2h-cdI" userLabel="Add Layer Button">
                                                <rect key="frame" x="164.66666666666666" y="0.0" width="44.666666666666657" height="44"/>
                                                <accessibility key="accessibilityConfiguration" hint="Tap here to choose a different sound." identifier="instrumentChooser" label="Instrument Menu"/>
                                                <color key="tintColor" red="0.38397389650000002" green="0.78096622230000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <state key="normal" title="add jam" image="microjam-layer">
                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                </state>
                                                <connections>
                                                    <action selector="addJam:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zna-bh-aMV"/>
...
                            <mask key="constraints">
                                <exclude reference="ZPz-88-bma"/>
                                <exclude reference="aaP-7f-fRc"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="New Performance" id="s03-xk-IIg">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Y3a-G9-SuM">
                            <connections>
                                <action selector="cancelPerformance:" destination="BYZ-38-t0r" id="lsO-Mq-Cpf"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="wbR-IC-fN1">
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="EVE-Cq-utu" id="h29-kY-i95"/>
                            <outlet property="delegate" destination="EVE-Cq-utu" id="8S8-yK-1vC"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Microjams!" id="CQY-5h-CEH">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="yea-KT-fdv">
                            <connections>
                                <segue destination="BYZ-38-t0r" kind="show" identifier="AddPerformance" id="Hyh-JE-FSE"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            <point key="canvasLocation" x="2265.8203125" y="-761.71875"/>
        </scene>
        <!--jam!-->
        <scene sceneID="pxq-yu-huV">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vIe-H4-AUR" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="jam!" image="localjamsTabIcon" id="e2p-ff-do7"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uJB-kD-SaZ">
                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <point key="canvasLocation" x="258" y="-409"/>
        </scene>
        <!--world-->
        <scene sceneID="kzA-nM-xvC">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Bey-kK-l91" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="world" image="remotejamsTabIcon" id="4Kg-3T-GGP"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ppF-24-uDs">
                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
