...
/// Constants relating SoundScheme names, ids, and Pd file names.
struct SoundSchemes {
    static let namesForKeys : [Int64 : String] = [
        0 : "chirp",
        1 : "keys",
        2 : "drums",
        3 : "strings",
        4 : "quack",
        5 : "wub",
        6 : "pad",
        7 : "fmlead",
        8 : "leadguitar"
    ]
...
