...
                self.performanceStore.deleteUserPerformance(withID: recID)
            }
            print("Cell Removed")
            self.collectionView?.reloadData()
        })
        // Cancel Action
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: { action in
            print("Cancel actionsheet")
        })
        alertActionCell.addAction(shareAction)
        if cell.performance?.creatorID == UserProfile.shared.record?.creatorUserRecordID {
            // Only add delete if it relates to the present user.
            alertActionCell.addAction(deleteAction)
...
