...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set a stagename for your Microjams" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qsP-zo-lD
                                        <rect key="frame" x="0.0" y="0.0" width="333" height="76.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="choose a stage name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eiY-g1-KKK">
                                        <rect key="frame" x="0.0" y="76.5" width="333" height="80"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="80" id="yc2-Gg-06x"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="28"/>
...
